[tool.poetry]
name = "pacu"
version = "1.4.1"
description = "The AWS exploitation framework, designed for testing the security of Amazon Web Services environments."
authors = ["Rhino Assessment Team <pacu@rhinosecuritylabs.com>"]
license = "BSD-3"

[tool.poetry.scripts]
pacu = "pacu.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
awscli = "^1.18"
boto3 = "^1.16"
botocore = "^1.16"
requests = "^2.25.1"
urllib3 = "^1.26.4"
SQLAlchemy = "~1.3.0"
SQLAlchemy-Utils = "^0.37.2"
typing-extensions = "^4.0.0"
dsnap = "^1.0.0"
chalice = "^1.27.3"
policyuniverse = "^1.5.0.20220613"
pycognito = "^2023.5.0"
qrcode = "^7.4.2"
jq = "^1.4.1"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
mypy = "^0.812"
sqlalchemy-stubs = "^0.4"
pytest = "^6.2.3"
freezegun = "^1.1.0"
typing-extensions = "^4.0.0"
boto3-stubs = {extras = ["iam", "s3", "lambda"], version = "^1.17.54"}
moto = "^2.2.1"
importlib-metadata = "4.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
